--- a/index.html
+++ b/index.html
@@ -5,13 +5,17 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Brokeris</title>
+
+  <title>Brokeris | Sistema para Corretoras de Planos de Saúde</title>
+  <meta name="description"
+    content="Simplifique a gestão da sua corretora de saúde: cadastre propostas, controle comissões, emita recibos e acompanhe sua lucratividade em tempo real. Teste grátis por 15 dias.">
 
 
+
   <!-- Meta Pixel Code -->
   <!-- Meta Pixel Code -->
   <!-- Meta Pixel Code -->
-  <script>
+  <!-- <script>
     !function (f, b, e, v, n, t, s) {
       if (f.fbq) return; n = f.fbq = function () {
         n.callMethod ?
@@ -25,20 +29,17 @@
       'https://connect.facebook.net/en_US/fbevents.js');
     fbq('init', '757818427404213');
     fbq('track', 'PageView');
-  </script>
+  </script> -->
 
   <!-- End Meta Pixel Code -->
 
   <!-- End Meta Pixel Code -->
   <!-- End Meta Pixel Code -->
-
-
-
 </head>
 
 <body style="margin: 0;">
-  <noscript><img height="1" width="1" style="display:none"
-      src="https://www.facebook.com/tr?id=757818427404213&ev=PageView&noscript=1" /></noscript>
+  <!-- <noscript><img height="1" width="1" style="display:none"
+      src="https://www.facebook.com/tr?id=757818427404213&ev=PageView&noscript=1" /></noscript> -->
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
