--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <title>Brokeris | Sistema para Corretoras de Planos de Saúde</title>
   <meta name="description"
-    content="Simplifique a gestão da sua corretora de saúde: cadastre propostas, controle comissões, emita recibos e acompanhe sua lucratividade em tempo real. Teste grátis por 15 dias.">
+    content="sistema para corretora de planos de saúde - Simplifique a gestão da sua corretora de saúde: cadastre propostas, controle comissões, emita recibos e acompanhe sua lucratividade em tempo real. Teste grátis por 15 dias.">
 
 
 
